Reverted BountyHunter skill. Added historical tips UI. Improved tutorial tips.